fixed gallary on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -46,6 +46,10 @@ img#zillow-icon {
     height: 100vh;
 }
 
+.col-xs-12{
+    padding: 0;
+}
+
 div#noResults {
     position: absolute;
     color: white;
@@ -57,6 +61,15 @@ div#noResults {
     bottom: 50%;
     text-align: center;
     font-size: 1.3em;
+}
+
+.col-xs-12.ng-scope {
+    padding: 0;
+}
+
+.panel h4 {
+    color: #FFFEFE;
+    text-shadow: -2px 2px 10px black;
 }
 
 div#noResults p {
@@ -102,10 +115,18 @@ ul.dropdown-menu .btn-info {
     top: -.5em;
 }
 
+div#galFull {
+    padding: 0;
+}
+
+.col-xs-8.rightSide {
+    padding: 0;
+}
+
 ul.dropdown-menu {
     width: 25vw;
     padding: 20%;
-    background-color: #02809D !important
+    background-color: rgb(133, 192, 255) !important;
 }
 
 .panel-default>.panel-heading {
@@ -195,7 +216,7 @@ h4 {
     color: white;
 }
 .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
-    background-color: #323957;
+    background-color: #0B1A29;
 }
 
 #modal ul:not(#first) {
@@ -210,7 +231,7 @@ p#formMessage {
     background-color: #765FFF !important;
 }
 nav {
-    background-color: #02809D !important;
+    background-color: rgb(133, 192, 255) !important;
 }
 
 .rightSide button {
@@ -228,6 +249,10 @@ nav {
 .nav>li>a:focus, .nav>li>a:hover {
     text-decoration: none;
     background-color: #02809D !important;
+}
+
+.panel-heading {
+    background-color: #90EAFF;
 }
 
 .mainContainer {
@@ -321,11 +346,10 @@ span.glyphicon.glyphicon-ok {
 
 #ngView {
     height: 100%;
-    overflow: scroll;
 }
 
 .leftSide {
-    background-color: #00080A;
+    background-color: #0B1A29;
     overflow: scroll;
 }
 
@@ -371,25 +395,29 @@ div#savedColumn .btn-success {
     padding: .5vw;
 }
 
-.carousel{
+.carousel {
     height: 100%;
+    background-color: black;
 }
 
 .carousel-inner {
+    position: relative;
+    height: 100%;
+}
+
+.carousel-inner img{
+    width: 100%;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
 }
 
-.carousel img {
-    max-width: 120%;
-    width: 115%;
+.carousel-inner>div {
+    background-color: black !important;
+    height: 100%;
+    position: relative;
 }
 
-.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
-    display: block;
-    width: 100%;
-}
 
 @media screen and (max-width: 767px) {
     .navbar-nav .open .dropdown-menu {
@@ -421,7 +449,7 @@ a:hover {
 }
 
 span.icon-bar {
-    border: 1px solid #DBDBDB;
+    border: 1px solid #FFFFFF;
 }
 
 @media screen and (max-width: 767px) {
